<resources>
    <string name="app_name">BingwitProducer</string>
    <string name="username_hint">Username/Phone No.</string>
    <string name="password_hint">Password</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in">sign in</string>
    <string name="full_name">Full Name</string>
    <string name="address">House No., Street</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="dashboard_navigation">Dashboard</string>
    <string name="price_per_kilogram_pesos">Price per Kilogram (Pesos)</string>
    <string name="min_price_pesos">Min. Price (Pesos)</string>
    <string name="max_price_pesos">Max Price (Pesos)</string>
    <string name="title_activity_transaction_history">TransactionHistoryActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">edit profile</string>
    <string name="dummy_name">Joseph Gabriel Gonzales</string>
    <string name="dummy_address">Blue House Unit 18</string>
    <string name="dummy_number">098765432190</string>
    <string name="save">Save</string>
    <string name="continue_text">Continue</string>
    <string name="share_something_about_yourself">Share something about yourself...</string>
    <string name="optional"><i>(Optional)</i></string>
    <string name="we_have_sent_a_four_digit_verification_code_to_your_phone">We have sent a four-digit verification code to your phone</string>
    <string name="enter_four_digit_code">Enter four-digit code</string>
    <string name="verify">Verify</string>
    <string name="resend_verification_code">resend verification code</string>
    <string name="placed_for_bidding">Placed for bidding</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="duration_of_bidding">Duration of Bidding</string>
    <string name="change_password">change password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm">Confirm</string>
    <string name="this_is_an_alert_for_errors">This is an alert for errors</string>
    <string name="enter_password_reset_code">Enter Password Reset Code</string>
    <string name="reset_code">Reset Code</string>
    <string name="send_reset_code">Send Reset Code</string>
    <string name="seconds">seconds</string>
    <string name="upload_image_from_phone">Upload image from phone</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="area">Area</string>
    <string name="are_you_sure_you_want_to_set_this_transaction_s_status_to_">Are you sure you want to set this transaction\'s status to</string>
    <string name="are_you_sure_you_want_to_change_this_transaction_s_status_to_status_you_will_no_longer_be_able_to_revert_this_previous_states">Are you sure you want to change this transaction\'s status to _status_? You will no longer be able to revert this to previous states.</string>
    <string name="province">Province</string>
    <string name="town">Town</string>
    <string name="baranggay">Barangay</string>
    <string name="auction_cancelled">Auction Cancelled</string>
    <string name="full_name_colon">Full Name:</string>
    <string name="address_colon">Address:</string>
    <string name="phone_number_colon">Phone Number:</string>
    <string name="area_colon">Area:</string>
    <string name="producer">Producer</string>
    <string-array name="transaction_statuses">
        <item>Order placed</item>
        <item>Ready for delivery</item>
        <item>Shipped</item>
        <item>Delivered</item>
    </string-array>
</resources>
