<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="gab.cdi.bingwitproducer.activities.RegistrationVerificationActivity">

    <TextView
        android:id="@+id/prompt_text_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        android:text="@string/we_have_sent_a_four_digit_verification_code_to_your_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/four_digit_code_input_field"
        app:layout_constraintTop_toBottomOf="@id/prompt_text_verification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_four_digit_code"
            android:textSize="14sp"
            android:fontFamily="@font/roboto"/>
        <EditText
            android:id="@+id/registration_verification_code_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:backgroundTint="@color/colorAccent"/>
    </LinearLayout>
    <TextView
        android:id="@+id/resend_verification_code_option"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_verification_code"
        android:textAllCaps="true"
        android:padding="8dp"
        android:onClick="onClick"
        android:fontFamily="@font/roboto_bold"
        />
    <Button
        android:id="@+id/finalize_registration_button"
        app:layout_constraintBottom_toTopOf="@id/resend_verification_code_option"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"
        android:text="@string/verify"
        android:textAllCaps="true"
        android:fontFamily="@font/lato"
        android:textColor="#ffffff"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"/>
</android.support.constraint.ConstraintLayout>
