<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="#ffffff"
    tools:context="gab.cdi.bingwitproducer.fragments.ConfirmTransactionStatusDialogFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/transaction_status_change_prompt_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:fontFamily="@font/roboto"
            android:layout_marginBottom="8dp"
            android:text="@string/are_you_sure_you_want_to_change_this_transaction_s_status_to_status_you_will_no_longer_be_able_to_revert_this_previous_states"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <Button
                android:id="@+id/change_transaction_status_cancel"
                android:text="@string/cancel"
                android:fontFamily="@font/lato"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:background="#EF5350"
                android:textColor="#ffffff"
                android:layout_marginRight="8dp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/change_transaction_status_confirm"
                android:text="@string/confirm"
                android:fontFamily="@font/lato"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                android:layout_marginLeft="8dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
