<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="gab.cdi.bingwitproducer.fragments.ChangePasswordDialogFragment">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">
        <TextView
            android:id="@+id/change_password_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textAllCaps="true"
            android:fontFamily="@font/roboto"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/change_password_fields"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_password_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/change_password_old_password_layout"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content"
                android:textColorHint="#747474">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/change_password_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:fontFamily="@font/roboto"
                android:inputType="textPassword"
                android:hint="@string/old_password"
                android:textColor="#000000" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/change_password_new_password_layout"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:textColorHint="#747474">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/change_password_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:inputType="textPassword"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/new_password"
                    android:textColor="#000000" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/change_password_confirm_new_password_layout"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:textColorHint="#747474">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/change_password_confirm_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/confirm_new_password"
                    android:inputType="textPassword"
                    android:textColor="#000000" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/change_password_fields"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/change_password_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <Button
                android:id="@+id/change_password_cancel_button"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#A0A0A0"
                android:text="@string/cancel"
                android:textColor="#ffffff"
                android:fontFamily="@font/lato"
                android:layout_marginRight="8dp"/>
            <Button
                android:id="@+id/change_password_confirm_button"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/confirm"
                android:textColor="#ffffff"
                android:fontFamily="@font/lato"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</RelativeLayout>
