<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context="gab.cdi.bingwitproducer.fragments.EnterPasswordResetCodeDialogFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_password_reset_code"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textAllCaps="true"
            android:fontFamily="@font/roboto"
            android:layout_marginBottom="16dp"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/reset_password_reset_code_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:textColorHint="#747474"
            android:layout_marginBottom="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_reset_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/reset_code"
                android:fontFamily="@font/roboto"
                android:textColor="#000000"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:visibility="gone"
            android:id="@+id/reset_password_new_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:textColorHint="#747474"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="New Password"
                android:inputType="textPassword"
                android:fontFamily="@font/roboto"
                android:textColor="#000000"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:visibility="gone"
            android:id="@+id/reset_password_confirm_new_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:textColorHint="#747474"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_confirm_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/confirm_new_password"
                android:fontFamily="@font/roboto"
                android:inputType="textPassword"
                android:textColor="#000000"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/reset_password_button"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/send_reset_code"
            android:textSize="14sp"
            android:textColor="#ffffff"/>
    </LinearLayout>

</RelativeLayout>
