<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gab.cdi.bingwitproducer.activities.RegistrationActivity">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/registration_collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="#000000"
                app:expandedTitleTextAppearance="@android:color/transparent">
                <android.support.constraint.ConstraintLayout
                    android:visibility="gone"
                    app:layout_collapseMode="parallax"
                    android:background="#CDCDCD"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">
                    <ImageView
                        android:id="@+id/registration_add_photo"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_photo_camera"/>
                </android.support.constraint.ConstraintLayout>
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:id="@+id/registration_input_fields_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="true"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/full_name_textinputlayout"
                android:layout_width="match_parent"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/registration_fullname_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="#000000"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/full_name"
                    android:backgroundTint="@color/colorPrimaryDark"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_marginBottom="16dp"
                android:id="@+id/address_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/registration_address_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="#000000"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/address"
                    android:backgroundTint="@color/colorPrimaryDark"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:id="@+id/registration_area_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    />
                <Spinner
                    android:id="@+id/registration_area_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_marginBottom="16dp"
                android:id="@+id/phone_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/registration_phone_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="#000000"
                    android:inputType="phone"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/phone_number"
                    android:backgroundTint="@color/colorPrimaryDark"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_marginBottom="16dp"
                android:id="@+id/username_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/registration_username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="#000000"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/username_hint"
                    android:backgroundTint="@color/colorPrimaryDark"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_marginBottom="16dp"
                android:id="@+id/password_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/registration_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="#000000"
                    android:inputType="textPassword"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/password_hint"
                    android:backgroundTint="@color/colorPrimaryDark"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_marginBottom="16dp"
                android:id="@+id/confirm_password_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/registration_confirm_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="#000000"
                    android:inputType="textPassword"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/confirm_password_hint"
                    android:backgroundTint="@color/colorPrimaryDark"
                    />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/registration_continue_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/continue_text"
                android:textAllCaps="true"
                android:layout_marginBottom="16dp"
                android:onClick="onClick"
                android:fontFamily="@font/lato"
                android:textColor="@color/md_white"
                />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
